Completed a physical Analysis of the AAQuad and used the results to build a tesing framework that was used to tune the PID

--- a/project.yml
+++ b/project.yml
@@ -27,12 +27,12 @@
 
 :paths:
   :test:
-    - +:test/**
-    - -:test/support
+    - +:UnitTests/**
+    - -:UnitTests/support
   :source:
     - src/**
   :support:
-    - test/support
+    - UnitTests/support
 
 :defines:
   # in order to add common defines:
