--- a/PidTests/Makefile
+++ b/PidTests/Makefile
@@ -1,10 +1,12 @@
 
 build:
-	gcc testRunner.c ../src/Common.c ../src/Pid.c -o testRunner.out
+	gcc testRunner.c ../src/Common.c ../src/Pid.c ../src/LowPassFilter.c -o testRunner.out
 
 debug:
 	gcc -g testRunner.c ../src/Common.c ../src/Pid.c -o testRunner.out
 	gdb testRunner.out
+run:
+	./testRunner.out
 
 clean:
 	rm *.out
